--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
-    "redux-actions": "^2.4.0"
+    "redux-actions": "^2.4.0",
+    "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -22,6 +23,9 @@
     "@types/node": "^10.3.2",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
+    "@types/redux-actions": "^2.3.0",
+    "@types/redux-devtools-extension": "^2.13.2",
     "typescript": "^2.9.1"
   }
 }
