--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "gdax": "^0.8.0",
+    "http": "0.0.0",
+    "node-http-proxy": "^0.2.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
-    "redux-devtools-extension": "^2.13.2"
+    "redux-devtools-extension": "^2.13.2",
+    "websocket": "^1.0.26",
+    "ws": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
