--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-devtools-extension": "^2.13.2",
+    "uuid": "^3.2.1",
     "websocket": "^1.0.26",
     "ws": "^5.2.0"
   },
