--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
+    "react-websocket": "^2.0.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-devtools-extension": "^2.13.2",
