--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
+    "express-ws": "^4.0.0",
     "gdax": "^0.8.0",
     "http": "0.0.0",
     "node-http-proxy": "^0.2.3",
