--- a/package.json
+++ b/package.json
@@ -18,15 +18,7 @@
     "redux-devtools-extension": "^2.13.2",
     "uuid": "^3.2.1",
     "websocket": "^1.0.26",
-    "ws": "^5.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
-  },
-  "devDependencies": {
+    "ws": "^5.2.0",
     "@types/jest": "^23.0.2",
     "@types/node": "^10.3.2",
     "@types/react": "^16.3.17",
@@ -35,5 +27,12 @@
     "@types/redux-actions": "^2.3.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "typescript": "^2.9.1"
+  },
+  "scripts": {
+    "start": "npm run build && node proxy/server.js",
+    "dev": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   }
 }
